syntax = "proto3";
package stock;
option go_package = "./;proto";

service Stock {
  rpc GetArticles(RequestArticles) returns (ResponseArticles);
}

message RequestArticles {
  string categoryQuery = 1;
}

message ResponseArticles {
  message Article {
    string id = 1;
    string name = 2;
    string category = 3;
    float priceEuro = 4;
    int32 amount = 5;
  }
  repeated Article articles = 1;
}
